--- a/polarstomps-ui/polarstomps-svc.yml
+++ b/polarstomps-ui/polarstomps-svc.yml
@@ -2,9 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: polarstomps
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: external
+    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+    service.beta.kubernetes.io/aws-load-balancer-alb-target-type: instance
 spec:
+  type: LoadBalancer
   ports:
-    - port: 8080
+    - port: 80
       targetPort: 8080
+      name: http
   selector:
     app: polarstomps
