--- a/polarstomps-ui/polarstomps-deployment.yml
+++ b/polarstomps-ui/polarstomps-deployment.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - image: howdoicomputer/polarstomps:v1
-          name: polarsteps
+          name: polarstomps
           ports:
             - containerPort: 8080
