--- a/polarstomps-ui/polarstomps-svc.yml
+++ b/polarstomps-ui/polarstomps-svc.yml
@@ -6,6 +6,7 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-type: external
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
+  namespace: polarstomps
 spec:
   type: LoadBalancer
   ports:
