--- a/polarstomps-ui/polarstomps-ingress.yml
+++ b/polarstomps-ui/polarstomps-ingress.yml
@@ -12,6 +12,7 @@ spec:
     - http:
         paths:
           - path: /
+            pathType: exact
             backend:
               service:
                 name: polarstomps
