--- a/polarstomps-ui/polarstomps-ingress.yml
+++ b/polarstomps-ui/polarstomps-ingress.yml
@@ -17,4 +17,4 @@ spec:
               service:
                 name: polarstomps
                 port:
-                  name: svc-port
+                  name: http
