--- a/polarstomps-ui/polarstomps-deployment.yml
+++ b/polarstomps-ui/polarstomps-deployment.yml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: polarstomps
 spec:
+  strategy: RollingUpdate
   replicas: 1
   revisionHistoryLimit: 3
   selector:
