--- a/polarstomps-ui/polarstomps-deployment.yml
+++ b/polarstomps-ui/polarstomps-deployment.yml
@@ -18,3 +18,6 @@ spec:
           name: polarstomps
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: "0.5"
