--- a/polarstomps-ui/polarstomps-deployment.yml
+++ b/polarstomps-ui/polarstomps-deployment.yml
@@ -13,14 +13,14 @@ spec:
       labels:
         app: polarstomps
     spec:
-      serviceAccountName: polarstomps
-      volumes:
-        - name: secrets-store-inline
-          csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: "eks-aws-secrets"
+      # serviceAccountName: polarstomps
+      # volumes:
+      #   - name: secrets-store-inline
+      #     csi:
+      #       driver: secrets-store.csi.k8s.io
+      #       readOnly: true
+      #       volumeAttributes:
+      #         secretProviderClass: "eks-aws-secrets"
       containers:
         - image: howdoicomputer/polarstomps:v4
           name: polarstomps
@@ -30,9 +30,9 @@ spec:
             requests:
               cpu: "0.5"
           volumeMounts:
-            - name: secrets-store-inline
-              mountPath: "/mnt/secrets-store"
-              readOnly: true
+            # - name: secrets-store-inline
+            #   mountPath: "/mnt/secrets-store"
+            #   readOnly: true
           env:
             - name: DATABASE_URL
               value: "sqlite:///./sqlite.db"
